# LilyTest_S3

./: CMakeLists.txt  LICENSE  README.md
EEZ Project/: LilyTest_S3.eez-project  LilyTest_S3.eez-project-ui-state
main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.c
main/ui/: screens.c  screens.h
